--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,27 @@
 
 * {
 background-color: palegoldenrod;
-text-align: center;
+text-align: left;
 }
 
+
+
 h1{
+    text-align: center;
     color:red;
+}
+
+h2{
+    text-align: center;
+    color:red;
+}
+
+div{
+    text-align: center;
+}
+
+p{
+    text-align: center;
 }
 
 .pizza-img {
@@ -14,13 +30,19 @@ h1{
 
 }
 
+.fajita-img {
+    width: 400px;
+    height: 600px;
+}
+
 ul{
-    padding-left: 0;
-    text-align:center;
+    padding-left:880px;
+    text-align:left;
     list-style-position: inside;
 }
 
 ol{
-    text-align: center;
+    padding-left:800px;
+    text-align: left;
     list-style-position: inside;
 }
